--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes es es mi sitio web 
-        sigueme en twiter.
+        Hola amigas putas, si tienen dudas preguntame en onlyfans.
     </p>
 </body>
 </html>
